Switched to AM_ICONV for Cygwin.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,3 +8,5 @@ dist_doc_DATA = doc/ANNOUNCE.mkdosfs \
 		doc/README.dosfstools-2.x \
 		doc/README.mkdosfs \
 		doc/TODO.dosfstools-2.x
+
+EXTRA_DIST = config.rpath
